Fix alignment

--- a/app/success/[id]/page.module.scss
+++ b/app/success/[id]/page.module.scss
@@ -16,12 +16,13 @@
     position: relative;
     width: 100%;
     height: 30vh;
-
+  
     @media (min-width: 1020px) {
+      position: fixed;
       top: 0;
+      left: 0;
       width: 30%;
       height: 100vh;
-      position: fixed;
     }
   }
 
@@ -35,42 +36,48 @@
     display: block;
     flex: 1;
     overflow-y: auto;
-    margin: 0 auto;
     padding: 2rem;
-
+    
     @media (min-width: 1020px) {
-      margin-left: 10%;
+      margin-left: 30%; // Adjust this value to match the width of the imageWrapper
     }
   }
 
   &__client {
-    font-size: 1.2rem;
     margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+
+    text-align: center;
   }
 
-  &__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // max-width: 800px;
-    margin: 0;
-    // margin: 0 auto;
+  // &__content {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   // max-width: 800px;
+  //   margin: 0;
+  //   // margin: 0 auto;
 
-    @media (min-width: 1020px) {
-      margin: 0 0 0 10vw;
-    }
+  //   @media (min-width: 1020px) {
+  //     margin: 0 0 0 10vw;
+  //   }
 
-  }
+  // }
 
 
   &__dates {
-    font-size: clamp(1rem, 1.2vw, 1.5rem);
     margin-bottom: 1.5rem;
+    
+    text-align: center;
+
+    font-size: clamp(1rem, 1.2vw, 1.5rem);
   }
 
   &__title {
     margin: 0 auto;
+
     font-size: clamp(1.5rem, 3vw, 2.8rem);
+    text-align: center;
     // margin-bottom: 1rem;
   }
 
